refactor: adapter 수정 (#355)